修复了ie9访客端无法发送中文问题

--- a/src/main/resources/templates/apps/im/index.html
+++ b/src/main/resources/templates/apps/im/index.html
@@ -65,8 +65,7 @@
 								type:"writing",
 								session:"${sessionid!''}",
 								orgi:"${orgi!''}",
-								message : strValue
-						});
+								message : encodeURIComponent(message)
 					}
 					words = this.count("text") ;
 					document.getElementById('surplus').innerHTML = count+"/"+limitNum+" , " + pattern; //输入显示
